--- a/DEA2.html
+++ b/DEA2.html
@@ -19,7 +19,7 @@
     The Medical Information Form (MEDIF) & Frequent Travellers Medical Card (FREMEC)
 </h1>
 
-
+<img src="b1.jpg" width="730" height="400"/>
 <br>
 <br>
 <br>
@@ -60,8 +60,9 @@
 <p>
     SriLankan Airlines must be notified immediately of any change in the passengers condition PRIOR to travel
 </p>
-
-<h3>
+<br>
+<br>
+<h3> 
     Frequent travellers medical card - FREMEC
 </h3>
 
@@ -82,7 +83,8 @@
     Obtaining a FREMEC is as simple as submitting a one-time medical form to any SriLankan Airlines office worldwide. The one time form, downloaded from here and filled and certified by his/her personal physician. On evaluation and eligibility, SriLankan Airlines’ Medical Services would then issue a FREMEC card in the name of the passenger to be collected from the relevant Ticket Office.
 </p>
 
-
+<hr>
+<hr>
 
 
 </body>
