--- a/DEA1.html
+++ b/DEA1.html
@@ -20,7 +20,7 @@
         Online/Mobile Check-in
     </h1>
 
-
+	<img src="aaa.jpg" width="930" height="600"/>
     <h2>
 
         Save time with our web check in!
