--- a/DEA3.html
+++ b/DEA3.html
@@ -3,6 +3,10 @@
 
  <head>
 
+
+    <link rel="stylesheet" href="01.css">
+
+
  </head>
 
 
@@ -14,11 +18,13 @@
     <body style="background-color:rgb(203, 232, 236);">
 
 
-        <img src="112.jpg" width="930" height="600"/> 
-<h1>
+        
+<h1> 
     Flying with Children
 </h1>
 
+
+<img src="112.jpg" width="930" height="600"/> 
         <p>
             We’ll try to make your flight as stress free as possible! We’ve got diapers, baby food and bassinets on board. Special diaper changing boards are also located in selected toilets. SriLankan Airlines makes every effort to ensure your children will have a safe and enjoyable flight. Our well-trained and dedicated Child Care Stewardess have been assigned especially to take care of the kids on board. Please feel free to request for her assistance while onboard.
         </p>
