--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
             </div>
             
             <div class="social-icons">
-                <img src="fb.jpg">
+                <img src="fb.png">
                 <img src="tw.png">
                 <img src="gp.jpg">
             </div>
