--- a/login.html
+++ b/login.html
@@ -1,9 +1,23 @@
 <html>
-<head>
-    <title>Login and Register page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <head>
+        <title>Travel website</title>
+        <link rel="stylesheet" type="text/css" href="login.css">
+    </head>
+    <body>
+        <div class="wrapper">
+            <nav>
+               <input type="radio" name="tab" id="home" checked>
+               <input type="radio" name="tab" id="Book_Flight">
+               <input type="radio" name="tab" id="Travel-Info">
+               <input type="radio" name="tab" id="hotels">
+               <input type="radio" name="tab" id="LogIn">
+               <label for="home" class="home"><a href="#"><i class="fas fa-home"></i>Home</a></label>
+               <label for="Book_Flight" class="Book_Flight"><a href="#"><i class="far fa-flight"></i>Book Flight</a></label>
+               <label for="Travel-Info" class="Travel-Info"><a href="#"><i class="far fa-information"></i>Travel Info</a></label>
+               <label for="hotels" class="hotels"><a href="#"><i class="far fa-hotel"></i>hotels</a></label>
+               <label for="LogIn" class="LogIn"><a href="#"><i class="far fa-login"></i>LogIn</a></label>
+               <div class="tab"></div>
+            </nav>
     <div class="hero">
         <div class="form-box">
             <div class="button-box">
