--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
                <input type="radio" name="tab" id="Travel-Info">
                <input type="radio" name="tab" id="hotels">
                <input type="radio" name="tab" id="LogIn">
-               <label for="home" class="home"><a href="#"><i class="fas fa-home"></i>Home</a></label>
+               <label for="home" class="home"><a href="index.html"><i class="fas fa-home"></i>Home</a></label>
                <label for="Book_Flight" class="Book_Flight"><a href="#"><i class="far fa-flight"></i>Book Flight</a></label>
                <label for="Travel-Info" class="Travel-Info"><a href="#"><i class="far fa-information"></i>Travel Info</a></label>
                <label for="hotels" class="hotels"><a href="#"><i class="far fa-hotel"></i>hotels</a></label>
