--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
                <label for="Book_Flight" class="Book_Flight"><a href="#"><i class="far fa-flight"></i>Book Flight</a></label>
                <label for="Travel-Info" class="Travel-Info"><a href="#"><i class="far fa-information"></i>Travel Info</a></label>
                <label for="hotels" class="hotels"><a href="#"><i class="far fa-hotel"></i>hotels</a></label>
-               <label for="LogIn" class="LogIn"><a href="#"><i class="far fa-login"></i>LogIn</a></label>
+               <label for="LogIn" class="LogIn"><a href="login.html"><i class="far fa-login"></i>LogIn</a></label>
                <div class="tab"></div>
             </nav>
             </div>
